2011-06-17  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (BridgeConnection): Rename self.handler to
	self.__handler.
	(BridgeConnection.__forward_request_headers): Rename from
	forward_request_headers.
	(BridgeConnection.__forward_reply_headers): Rename from
	forward_reply_headers.
	(BridgeConnection.__forward_reply_payload): Rename from
	forward_reply_payload.
	(BridgeConnection.__terminate_client_connection): Rename from
	terminate_client_connection.
	(BridgeConnection.__finalize): Rename from finalize.

	* src/bridge.py (BridgeConnection.handle_connection): Move from
	a top-level function.

	* src/bridge.py (handle_connection): Move all connection-specific code
	from bridge_one_request here.

	* src/bridge.py (fas_user_is_in_group): Move into infrastructure
	section.

	* src/bridge.py (BridgeConnection.forward_request_headers): Split from
	handle_connection().
	(BridgeConnection.read_request_headers)
	(BridgeConnection.read_request_payload_size): Fold into
	forward_request_headers().

	* src/bridge.py (BridgeConnection.__init__): Initialize self.handler.
	(BridgeConnection.finalize): Split from handle_connection.  Handle cases
	when handler was not initialized.
	(handle_connection): Finalize the connection even when
	conn.read_request_headers() fails.

	* src/bridge.py (BridgeConnection.forward_reply_headers): New
	function, split from handle_connection.
	(BridgeConnection.read_reply_payload_size)
	(BridgeConnection.forward_reply_payload_authenticator): Fold into
	forward_reply_headers.

	* src/bridge.py (bridge_one_request): Close server socket even if
	client has failed to connect.

	* src/bridge.py (RequestValidator): Split from RequestType.
	(RequestValidator.__init__): Remove default value of max_payload.
	Remove default_fields handling.
	(RequestValidator.validate): Rename back from validate_data.
	(RequestHandler): Rename from RequestType, use one instance per
	connection.
	(RequestHandler.validate): Remove.